--- a/src/components/category_preview/category_preview.scss
+++ b/src/components/category_preview/category_preview.scss
@@ -3,10 +3,9 @@
   flex-direction: column;
   margin-bottom: 30px;
 
-  .title {
+  .category-title {
     font-size: 28px;
     margin-bottom: 25px;
-    cursor: pointer;
   }
 
   .preview {
